# src/beeApi/routers/commentsRouter_controllers_myController.go
@@ -9,6 +9,15 @@ func init() {
 
 	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers/myController:ManagerController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers/myController:ManagerController"],
 		beego.ControllerComments{
+			Method:           "GetClass",
+			Router:           "/class/:ma",
+			AllowHTTPMethods: []string{"get"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
+
+	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers/myController:ManagerController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers/myController:ManagerController"],
+		beego.ControllerComments{
 			Method:           "AddStudentToClass",
 			Router:           "/class/add-student/:ma_lop",
 			AllowHTTPMethods: []string{"put"},
@@ -54,8 +63,17 @@ func init() {
 
 	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers/myController:ManagerController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers/myController:ManagerController"],
 		beego.ControllerComments{
-			Method:           "GetClass",
-			Router:           "/class/get/:ma",
+			Method:           "SearchStudent",
+			Router:           "/class/search/:key",
+			AllowHTTPMethods: []string{"get"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
+
+	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers/myController:ManagerController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers/myController:ManagerController"],
+		beego.ControllerComments{
+			Method:           "GetStudent",
+			Router:           "/student/:ma",
 			AllowHTTPMethods: []string{"get"},
 			MethodParams:     param.Make(),
 			Filters:          nil,
@@ -75,15 +93,6 @@ func init() {
 			Method:           "DeleteStudent",
 			Router:           "/student/delete/:ma",
 			AllowHTTPMethods: []string{"delete"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers/myController:ManagerController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers/myController:ManagerController"],
-		beego.ControllerComments{
-			Method:           "GetStudent",
-			Router:           "/student/get/:ma",
-			AllowHTTPMethods: []string{"get"},
 			MethodParams:     param.Make(),
 			Filters:          nil,
 			Params:           nil})
